--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.HelloKotlin">
+
+        <activity
+            android:name=".VariableJavaActivity"
+            android:label="VariableJavaActivity" />
+        <activity
+            android:name="VariableKotlinActivity2"
+            android:label="VariableKotlinActivity2" />
         <activity
             android:name=".BmiKotlinActivity"
-            android:label="BmiKotlinActivity"></activity>
+            android:label="BmiKotlinActivity" />
         <activity
             android:name=".BmiJavaActivity"
             android:label="BmiJavaActivity" />
